various changes and fixes
